--- a/.ci/Dockerfile
+++ b/.ci/Dockerfile
@@ -2,8 +2,9 @@ FROM python:3.10-slim
 ENV PYTHONUNBUFFERED 0
 
 RUN apt-get update \
-	&& apt-get install -y openssh-client --no-install-recommends \
-	&& pip install --upgrade --no-cache-dir pip
+	&& pip install --upgrade --no-cache-dir pip \
+	&& pip install --upgrade --no-cache-dir wheel \
+	&& pip install --upgrade --no-cache-dir setuptools
 
 COPY .. /src
 WORKDIR /src
