upd chatgpt proxy url

--- a/.env.default
+++ b/.env.default
@@ -1,5 +1,5 @@
 LOG_LEVEL=INFO
-CHATGPT_PROXY_URL=
+CHATGPT_PROXY_URL=https://bypass.duti.tech/api/
 TELEGRAM_API_KEY=
 OPEANAI_API_KEY=
 CHAT_ACCESS_TOKEN=
