added `USE_V2` params for the API switching

--- a/.env.default
+++ b/.env.default
@@ -1,5 +1,6 @@
 LOG_LEVEL=INFO
-CHATGPT_PROXY_URL=https://bypass.duti.tech/api/
+USE_V2=0
+CHATGPT_PROXY_URL=
 TELEGRAM_API_KEY=
 OPEANAI_API_KEY=
 CHAT_ACCESS_TOKEN=
